# online-course-platform

./: .env.example  .gitignore  Dockerfile  Makefile  celerybeat-schedule  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 0dc5c1691671_fix_reviews_instructor_responded_at_.py  523f4574e73a_add_media_uploads_table.py  8c183f3f3ff0_create_enrollments_lesson_progress_.py  90eafcbbec13_create_categories_courses_sections_.py  9e8efff84019_feat_notifications_add_notifications_.py  af3e08475ac5_add_reviews.py  c4f128eb0098_add_foreign_keys_to_instructor_and_.py  c6656b3462dc_add_tsvector_trigger_for_course_search.py  d30c96e31d07_create_users_instructor_profiles_.py  de164c1227eb_feat_reviews_add_enrollment_id_is_.py  e0914197c80a_add_lesson_attachments_table.py  efa4674c12d4_feat_certificates_add_certificates_table.py
app/: main.py
app/application/services/: auth_service.py  course_service.py  enrollment_service.py  notification_service.py  review_service.py  section_service.py  user_service.py
app/core/: celery_app.py  config.py  deps.py  exceptions.py  security.py  websocket_manager.py
app/domain/entities/: attachment.py  certificate.py  course.py  enrollment.py  media.py  notification.py  review.py  user.py
app/infrastructure/db/: base.py  (+1 more)
app/tasks/: __init__.py  certificate_task.py  email_tasks.py  tasks.py
docs/: postman_collection.json
scripts/: seed_categories.py
tests/: conftest.py
tests/integration/: test_auth_endpoints.py  test_course_endpoints.py
tests/unit/: conftest.py  test_review_service.py
(+54 files in other folders)
