[project]
name = "online-course-platform"
version = "0.1.0"
description = "Production-grade online course platform backend"
authors = [
    {name = "myratgeldiyevm1112"}
]
requires-python = "^3.12"
dependencies = [
    "fastapi[standard] (>=0.136.3,<0.137.0)",
    "sqlalchemy[asyncio] (>=2.0.50,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "pydantic-settings (>=2.14.1,<3.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "redis (>=5.3.0,<6.0.0)",
    "celery[redis] (>=5.6.3,<6.0.0)",
    "minio (>=7.2.20,<8.0.0)",
    "stripe (>=15.2.0,<16.0.0)",
    "python-multipart (>=0.0.32,<0.0.33)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "aiosmtplib (>=5.1.1,<6.0.0)",
    "structlog (>=26.1.0,<27.0.0)",
    "prometheus-fastapi-instrumentator (>=8.0.0,<9.0.0)",
    "slowapi (>=0.1.9,<0.2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-asyncio (>=1.4.0,<2.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "factory-boy (>=3.3.3,<4.0.0)",
    "ruff (>=0.15.17,<0.16.0)",
    "mypy (>=2.1.0,<3.0.0)"
]
